--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "14cf1ce2-9cc9-49ac-b2fe-437538af65dd"
 authors = ["Matthew Schlegel <mkschleg@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+RollingFunctions = "b0e4dd01-7b14-53d8-9b45-175a3e362653"
+
 [compat]
 julia = "1"
 
